tests/baselines/reference/augmentedTypesClass4.errors.txt
==== tests/cases/compiler/augmentedTypesClass4.ts (1 errors) ====
    //// class then class
    class c3 { public foo() { } }
    class c3 { public bar() { } } // error
          ~~
!!! augmentedTypesClass4.ts(3,7): error TS2000: Duplicate identifier 'c3'. Additional locations:
!!! 	augmentedTypesClass4.ts(2,1)
    